// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<JobStep /> > should render text and icon when state is special case 1`] = `
<DocumentFragment>
  <div
    class="sc-eDWCr sc-eYqcxL gmERkp fKKldT"
  >
    <div
      class="sc-fmPOXC byCizZ"
    >
      <i
        class="sc-hLBbgP iFSptS  fas fa-hourglass-end"
        color="red"
        title="timeout"
      />
    </div>
    <div
      class="sc-gkSfol cphaBg"
    >
      <h4>
        Timed Out
      </h4>
      <p>
        The job timed out.
      </p>
      <div
        class="sc-gzrROc gzboQX"
      >
        <i
          class="sc-hLBbgP icWVMU  fas fa-clock"
        />
        <span>
          17:48:05
        </span>
        <i
          class="sc-hLBbgP icWVMU  fas fa-calendar"
        />
        <span>
          2022-05-19
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<JobStep /> > should render text and icon when state is special case 2`] = `
<DocumentFragment>
  <div
    class="sc-eDWCr sc-eYqcxL gmERkp fKKldT"
  >
    <div
      class="sc-fmPOXC byCizZ"
    >
      <i
        class="sc-hLBbgP iFSptS  fas fa-skull"
        color="red"
        title="terminated"
      />
    </div>
    <div
      class="sc-gkSfol cphaBg"
    >
      <h4>
        Terminated
      </h4>
      <p>
        There was a system malfunction
      </p>
      <div
        class="sc-gzrROc gzboQX"
      >
        <i
          class="sc-hLBbgP icWVMU  fas fa-clock"
        />
        <span>
          17:48:05
        </span>
        <i
          class="sc-hLBbgP icWVMU  fas fa-calendar"
        />
        <span>
          2022-05-19
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<JobStep /> > should render text and icon when state is special case 3`] = `
<DocumentFragment>
  <div
    class="sc-eDWCr sc-eYqcxL gmERkp fKKldT"
  >
    <div
      class="sc-fmPOXC byCizZ"
    >
      <i
        class="sc-hLBbgP eAOQkA  fas fa-check"
        color="green"
        title="complete"
      />
    </div>
    <div
      class="sc-gkSfol cphaBg"
    >
      <h4>
        Complete
      </h4>
      <p />
      <div
        class="sc-gzrROc gzboQX"
      >
        <i
          class="sc-hLBbgP icWVMU  fas fa-clock"
        />
        <span>
          17:48:05
        </span>
        <i
          class="sc-hLBbgP icWVMU  fas fa-calendar"
        />
        <span>
          2022-05-19
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<JobStep /> > should render text and icon when state is special case 4`] = `
<DocumentFragment>
  <div
    class="sc-eDWCr sc-eYqcxL gmERkp fKKldT"
  >
    <div
      class="sc-fmPOXC byCizZ"
    >
      <i
        class="sc-hLBbgP iFSptS  fas fa-exclamation-triangle"
        color="red"
        title="error"
      />
    </div>
    <div
      class="sc-gkSfol cphaBg"
    >
      <h4>
        Error
      </h4>
      <p />
      <div
        class="sc-gzrROc gzboQX"
      >
        <i
          class="sc-hLBbgP icWVMU  fas fa-clock"
        />
        <span>
          17:48:05
        </span>
        <i
          class="sc-hLBbgP icWVMU  fas fa-calendar"
        />
        <span>
          2022-05-19
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<JobStep /> > should render text and icon when state is special case 5`] = `
<DocumentFragment>
  <div
    class="sc-eDWCr sc-eYqcxL gmERkp fKKldT"
  >
    <div
      class="sc-fmPOXC byCizZ"
    >
      <i
        class="sc-hLBbgP lbuzuw  fas fa-boxes"
        color="grey"
        title="preparing"
      />
    </div>
    <div
      class="sc-gkSfol cphaBg"
    >
      <h4>
        Preparing
      </h4>
      <p>
        Preparing the workflow environment.
      </p>
      <div
        class="sc-gzrROc gzboQX"
      >
        <i
          class="sc-hLBbgP icWVMU  fas fa-clock"
        />
        <span>
          17:48:05
        </span>
        <i
          class="sc-hLBbgP icWVMU  fas fa-calendar"
        />
        <span>
          2022-05-19
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<JobStep /> > should render text and icon when state is special case 6`] = `
<DocumentFragment>
  <div
    class="sc-eDWCr sc-eYqcxL gmERkp fKKldT"
  >
    <div
      class="sc-fmPOXC byCizZ"
    >
      <i
        class="sc-hLBbgP jjOKAv  fas fa-clock"
        color="purple"
        title="waiting"
      />
    </div>
    <div
      class="sc-gkSfol cphaBg"
    >
      <h4>
        Waiting
      </h4>
      <p>
        Waiting for resources to become available.
      </p>
      <div
        class="sc-gzrROc gzboQX"
      >
        <i
          class="sc-hLBbgP icWVMU  fas fa-clock"
        />
        <span>
          17:48:05
        </span>
        <i
          class="sc-hLBbgP icWVMU  fas fa-calendar"
        />
        <span>
          2022-05-19
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<JobStep /> > should render text and icon when state is special case 7`] = `
<DocumentFragment>
  <div
    class="sc-eDWCr sc-eYqcxL gmERkp fKKldT"
  >
    <div
      class="sc-fmPOXC byCizZ"
    >
      <i
        class="sc-hLBbgP iFSptS  fas fa-hourglass-end"
        color="red"
        title="timeout"
      />
    </div>
    <div
      class="sc-gkSfol cphaBg"
    >
      <h4>
        Timed Out
      </h4>
      <p>
        The job timed out.
      </p>
      <div
        class="sc-gzrROc gzboQX"
      >
        <i
          class="sc-hLBbgP icWVMU  fas fa-clock"
        />
        <span>
          17:48:05
        </span>
        <i
          class="sc-hLBbgP icWVMU  fas fa-calendar"
        />
        <span>
          2022-05-19
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
